feat: implement UserServiceImpl with user, patient, and doctor management functionalities